; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_TextSetAnimSpeed_b.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_TextSetAnimSpeed_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@script_cmd_args = common dso_local global i8** null, align 8
@text_in_speed = common dso_local global i8* null, align 8
@text_out_speed = common dso_local global i8* null, align 8
@text_draw_speed = common dso_local global i8* null, align 8
@script_cmd_args_len = common dso_local global i64 0, align 8
@script_ptr = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@script_continue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Script_TextSetAnimSpeed_b() #0 {
  %1 = load i8**, i8*** @script_cmd_args, align 8
  %2 = getelementptr inbounds i8*, i8** %1, i64 0
  %3 = load i8*, i8** %2, align 8
  store i8* %3, i8** @text_in_speed, align 8
  %4 = load i8**, i8*** @script_cmd_args, align 8
  %5 = getelementptr inbounds i8*, i8** %4, i64 1
  %6 = load i8*, i8** %5, align 8
  store i8* %6, i8** @text_out_speed, align 8
  %7 = load i8**, i8*** @script_cmd_args, align 8
  %8 = getelementptr inbounds i8*, i8** %7, i64 2
  %9 = load i8*, i8** %8, align 8
  store i8* %9, i8** @text_draw_speed, align 8
  %10 = load i64, i64* @script_cmd_args_len, align 8
  %11 = add nsw i64 1, %10
  %12 = load i32, i32* @script_ptr, align 4
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %13, %11
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* @script_ptr, align 4
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* @script_continue, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
